# mcp-server-manager

./: .gitignore  AI-SDK-PROD-BUILD-v3.3-Unit1.md  AI-SDK-PROD-BUILD-v3.3-Unit2.md  ARCHITECTURE.md  CHANGELOG.md  COMMAND.md  COMMANDS.md  CONTRIBUTING.md  ENVIRONMENT.md  EVIDENCE.md  FEATURES.md  NEXUS_GUIDE.md  README.md  Start Nexus.bat  Start Nexus.command  USER_OUTCOMES.md  bootstrap.py  command.md.bak  commands.md.bak  gui_bridge.py  gui_bridge.py.bak  gui_bridge.py.bak_clean  gui_bridge_v2.py  install.py  inventory.yaml  inventory_check.json  nexus_devlog.py  nexus_session_logger.py  nexus_tray.py  pyproject.toml  runtime_manager.py  sync_webmcp.py  uninstall.py  update_ev_v20.py  webmcp_server.py
examples/: inventory.yaml  mcp.server.json
forge/: forge_engine.py  mcp-forge.py
gui/: .gitignore  package-lock.json  package.json  playwright.config.ts  vite.config.ts
mcp_inventory/: __init__.py  cli.py  config.py  gate.py  gui.py  inventory.py  inventory.py.v2  logger.py  models.py  models.py.v2  nexus_devlog.py  runtime.py  scan.py  state.py  util.py
tests/: red_team_uat_batch.py  red_team_v10.py  test_cli_smoke.py  test_commands_flags_exist.py  test_forge_engine_baseline_server.py  test_gui_e2e_http.py  test_gui_optimization.py  test_gui_writable_logs.py  test_health_command_no_nameerror.py  test_path_normalization.py  test_red_team_call_chains.py  test_resilience.py  test_runtime_manager.py  test_status_payload.py  test_ui_call_chains.py  verify_atp_oneshot.py  verify_atp_parallel.py  verify_atp_safelist.py  verify_atp_user_prompt.py  verify_atp_v16.py  (+5 more)
(+17 files in other folders)
