[project]
name = "mcp-inventory"
version = "3.3.6"
description = "Local MCP server discovery + curated inventory (scan wide, accept strict)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "psutil>=5.9.0",
  "PyYAML>=6.0.0",
]

[project.scripts]
mcpinv = "mcp_inventory.cli:main"

[tool.setuptools]
packages = ["mcp_inventory"]
